[package]
name = "lewis"
version = "0.1.0"
authors = ["Chris Wong <lambda.fairy@gmail.com>"]

[dependencies]
atomicwrites = { git = "https://github.com/lfairy/rust-atomicwrites", branch = "generalize" }
byteorder = "*"
log = "*"
serde = "*"
serde_cbor = "*"

[dev-dependencies]
serde_derive = "*"
tempdir = "*"
